Fixing browser support for clip-path property on small devices

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -30,7 +30,7 @@
   @include respond(phone) {
     @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 95%);
     }
   }
 
